Navbar toggler no longer collapses under brand logo on smaller screen sizes.

--- a/css/style.scss
+++ b/css/style.scss
@@ -34,27 +34,6 @@ html {
   margin: -100px 0 0;
 }
 
-/* Navbar Collapse Styles To Stack Items At Mobile Widths*/
-@media (max-width: 47.9em) {
-  .navbar .navbar-brand {
-    float: none;
-    display: inline-block;
-    width:80%;
-    height:auto;
-  }
-  .navbar .navbar-nav > .nav-item {
-    float: none;
-    margin-left: 0.1rem;
-  }
-  .navbar .navbar-nav {
-    float: none !important;
-  }
-  .nav-item {
-    width: 100%;
-    text-align: left;
-  }
-}
-
 /* Header separator */
 .header-separator {
   background-color: $emerald-green;
@@ -567,7 +546,7 @@ footer .col-md-12 p {
   padding: 0;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   #recent-news .list li {
     padding-right: 0px;
   }
@@ -653,6 +632,15 @@ footer .col-md-12 p {
   transform: rotateX(0deg);
 }
 
+.logo {
+  width: 300px;
+}
+
+.navbar li {
+  display: inline-block;
+  white-space: nowrap;
+}
+
 /* Dropdown menu mobile behavior */
 @media (max-width: 992px) {
   .navbar .nav-item .dropdown-menu {
@@ -661,6 +649,11 @@ footer .col-md-12 p {
 
   .navbar .nav-item:hover .dropdown-menu {
     display: block;
+  }
+
+  .logo {
+    width:80%;
+    height:auto;
   }
 }
 
@@ -681,12 +674,10 @@ footer .col-md-12 p {
   border: none;
   cursor: pointer;
 }
-
 .dropdown {
   position: relative;
   display: inline-block;
 }
-
 .dropdown-content {
   display: none;
   position: absolute;
@@ -695,22 +686,18 @@ footer .col-md-12 p {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
-
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
-
 .dropdown-content a:hover {
   background-color: #f1f1f1;
 }
-
 .dropdown:hover .dropdown-content {
   display: block;
 }
-
 .dropdown:hover .dropbtn {
   background-color: #2f7ed8;
 }
@@ -877,16 +864,9 @@ select.form-control:focus::-ms-value {
   width: 100%;
 }
 
-#Logo {
-  height: auto;
-  width: 100%;
-  max-width: 300px;
-  transition: width 0.2s;
-}
-
 @media screen and (max-width: 1200px) {
-  #Logo {
-    max-width: 250px;
+  .logo {
+    width: 250px;
   }
 }
 
